fixed code difference issues and testcases and updated lov-queries